--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,20 +11,30 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Install Python 3.13
+      run: |
+        sudo apt update -y
+        sudo apt install -y software-properties-common
+        sudo add-apt-repository ppa:deadsnakes/ppa -y
+        sudo apt update -y
+        sudo apt install -y python3.13 python3.13-distutils
+        python3.13 -m pip install --upgrade pip
+        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.13'  # Specify the Python version you want to use
+        python-version: '3.13'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest-cov codecov
+        pip install pytest-cov
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=my_module  # Replace 'my_module' with your module
+        pytest --cov=my_module
         coverage report
         coverage html
         codecov
