--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,14 +12,16 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Python 3.13
-      run: |
-        sudo apt update -y
-        sudo apt install -y software-properties-common
-        sudo add-apt-repository ppa:deadsnakes/ppa -y
-        sudo apt update -y
-        sudo apt install -y python3.13 python3.13-distutils
-        python3.13 -m pip install --upgrade pip
-        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1
+      run: sudo apt update -y; sudo  apt upgrade -y; sudo apt install software-properties-common -y; sudo add-apt-repository ppa:deadsnakes/ppa -y ; sudo apt update -y ; sudo apt install python3.13 -y
+
+      # run: |
+      #   sudo apt update -y
+      #   sudo apt install -y software-properties-common
+      #   sudo add-apt-repository ppa:deadsnakes/ppa -y
+      #   sudo apt update -y
+      #   sudo apt install -y python3.13 python3.13-distutils
+      #   python3.13 -m pip install --upgrade pip
+      #   sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1
 
     - name: Set up Python
       uses: actions/setup-python@v4
